[package]
edition = "2021"
name = "fuzzer"
version = "0.3.2"
authors = ["coco <coco@hexgolems.com>"]
description = "The hermitcrab fuzzer"
default-run = "fuzzer"

[dependencies]
serde_repr = "0.1"
sha2 = "0.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
memmap = "0.7.0"
log = "0.4"
fern = "0.6.2"
nix = "0.26"
chrono = { version = "0.4", default-features = false, features = ["clock"]}
grammartec = {path = "../grammartec", version = "0.3"}
forksrv =  {path = "../forksrv", version = "0.3"}
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
clap = "4.0"
pyo3 = "0.18"
redis = "0.23.0"

[[bin]]
name = "fuzzer"
path = "src/main.rs"

[[bin]]
name = "generator"
path = "src/generator.rs"

[[bin]]
name = "mutator"
path = "src/mutation_tester.rs"
